--- a/style.css
+++ b/style.css
@@ -1,4 +1,21 @@
-body{
-    height: 100vh;
-    width: 100vw;
+body {
+  font-family: Arial, sans-serif;
+  text-align: center;
+  background-color: #FFFFFF;
+}
+
+#colors {
+  margin-bottom: 20px;
+}
+
+.square {
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  margin: 5px;
+  border: 1px solid #000;
+}
+
+#result {
+  font-weight: bold;
 }
